--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
 		"prettier-plugin-tailwindcss": "^0.6.10",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
-		"tailwindcss": "^3.4.17",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^5.4.11"
 	},
 	"dependencies": {
+		"socket.io-client": "^4.8.1",
 		"svelte-sonner": "^0.3.28"
 	}
 }
